--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,9 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
-          
+
       - name: Build project
-        run: mvn -f ../../POM.xml clean install
+        run: mvn -f autdemo/POM.xml clean install
         
       - name: Run E2E Tests
         run: mvn test
