--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,31 +2,22 @@ name: E2E Tests
 
 on:
   push:
-    branches:
-      - master
-
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+  
 jobs:
-  e2e_tests:
-    name: Run E2E Tests
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      
-      - name: Set up ChromeDriver
-        uses: nanasess/setup-chromedriver@v2
+  build:
+    runs-on: 
+      ubuntu-lateststeps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
         with:
-          chromedriver-version: '88.0.4324.96'
-
-      - name: Set up Java
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-
-      - name: Build project
-        run: mvn -f autdemo/pom.xml clean install
-        
-      - name: Run E2E Tests
-        run: mvn test
+          java-version: 1.8
+      - name:  Install Google Chrome # Using shell script to install Google Chrome
+        run:   |
+                chmod +x ./scripts/InstallChrome.sh
+                            ./scripts/InstallChrome.sh 
+      - name: Build with Maven
+        run: mvn test --file pom.xml
