--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,27 @@
-name: E2E Tests
+name: Selenium with TestNG - CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ master ]
-  
+    branches: [ "main" ]
+
 jobs:
   build:
-    runs-on: 
-      ubuntu-lateststeps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-      - name:  Install Google Chrome # Using shell script to install Google Chrome
-        run:   |
-                chmod +x ./scripts/InstallChrome.sh
-                            ./scripts/InstallChrome.sh 
-      - name: Build with Maven
-        run: mvn test --file pom.xml
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        cache: maven
+    
+    - uses: browser-actions/setup-chrome@latest
+    - run: chrome --version
+    
+    - name: Build with Maven
+      run: mvn -B clean test
