modify directory route

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,11 @@ jobs:
         run: chmod +x scripts/InstallChrome.sh
 
       - name: Run InstallChrome.sh
-        run: scripts/InstallChrome.sh
+        run: ./scripts/InstallChrome.sh
+
+      - name: Build project
+        run: mvn -f autdemo/pom.xml clean install
+
+      - name: Run E2E Tests
+        run: mvn -B clean test
 
