--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,11 @@ jobs:
           cache: maven
     
       - name: Set up Chrome
-        uses: browser-actions/setup-chrome@latest
-      
+        uses: nanasess/setup-chromedriver@v2 #browser-actions/setup-chrome@latest
+        with:
+          # Optional: do not specify to match Chrome's version
+          chromedriver-version: '94.0.4606.61'
+
       - name: Make InstallChrome.sh executable
         run: chmod +x ./scripts/installChrome.sh
 
