--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,17 +21,11 @@ jobs:
           distribution: 'temurin'
           cache: maven
     
-      - name: Set up Chrome
-        uses: nanasess/setup-chromedriver@v2 #browser-actions/setup-chrome@latest
-        #with:
-          # Optional: do not specify to match Chrome's version
-          #chromedriver-version: '94.0.4606.61'
-
-      - name: Make InstallChrome.sh executable
-        run: chmod +x ./scripts/installChrome.sh
-
-      - name: Run InstallChrome.sh
-        run: ./scripts/installChrome.sh
+      - uses: nanasess/setup-chromedriver@v2
+      - run: |
+          export DISPLAY=:99
+          chromedriver --url-base=/wd/hub &
+          sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
 
       - name: Build project
         run: mvn -f autdemo/pom.xml clean install
