--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,11 +21,8 @@ jobs:
           distribution: 'temurin'
           cache: maven
     
-      - uses: nanasess/setup-chromedriver@v2
-      - run: |
-          export DISPLAY=:99
-          chromedriver --url-base=/wd/hub &
-          sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
+      - uses: browser-actions/setup-chrome@latest
+      - run: chrome --version
 
       - name: Build project
         run: mvn -f autdemo/pom.xml clean install
